--- a/css/style.css
+++ b/css/style.css
@@ -1,5 +1,50 @@
 @import url('https://fonts.googleapis.com/css2?family=Be+Vietnam:wght@400;500;700&display=swap');
 
+body {
+  font-family: 'Be Vietnam', sans-serif;
+  font-size: 16px;
+  margin: 0;
+}
+
+/* Header section */
+.header {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  padding: 50px 20px;
+}
+.header__logo {
+  vertical-align: middle;
+}
+.header__menu__button {
+  background: transparent;
+  border: none;
+  cursor: pointer;
+}
+.header__menu {
+  display: none;
+  background-color: #ffffff;
+  text-align: center;
+  list-style: none;
+  width: 90%;
+  padding: 15px 0;
+  border-radius: 5px;
+  position: absolute;
+  top: 125px;
+  left: 20px;
+}
+.header__menu__item {
+  margin: 25px 0;
+}
+.header__menu__link {
+  color: hsl(228, 39%, 23%);
+  text-decoration: none;
+  font-weight: 700;
+}
+.header__button {
+  display: none;
+}
+
 /* Attribution Section */
 .attribution {
   font-size: 11px;
