--- a/css/style.css
+++ b/css/style.css
@@ -22,7 +22,6 @@ body {
   cursor: pointer;
 }
 .header__menu {
-  display: none;
   background-color: #ffffff;
   text-align: center;
   list-style: none;
@@ -30,8 +29,20 @@ body {
   padding: 15px 0;
   border-radius: 5px;
   position: absolute;
-  top: 125px;
+  top: 45px;
   left: 20px;
+}
+/* rgba(45, 49, 77, 0.7) */
+.header__menu__container.open {
+  position: fixed;
+  top: 80px;
+  right: 0;
+  left: 0;
+  bottom: 0;
+  background: linear-gradient(to bottom, rgba(255, 255, 255, 0.4), rgba(36, 45, 82, 0.6));
+}
+.header__menu.hidden {
+  display: none;
 }
 .header__menu__item {
   margin: 25px 0;
