--- a/css/style.css
+++ b/css/style.css
@@ -5,7 +5,28 @@ body {
   font-size: 16px;
   margin: 0;
 }
-
+.title {
+  font-weight: 700;
+  line-height: 1.3;
+  color: hsl(228, 39%, 23%);
+  margin: 0;
+}
+.paragraph {
+  color: hsl(227, 12%, 61%);
+  line-height: 1.5;
+}
+.button {
+  font-family: 'Be Vietnam', sans-serif;
+  font-size: 14px;
+  font-weight: 700;
+  background: hsl(12, 88%, 59%);
+  color: hsl(0, 0%, 98%);
+  border: none;
+  border-radius: 50px;
+  box-shadow: 0 15px 10px -10px hsl(12, 70%, 68%);
+  padding: 15px 35px;
+  cursor: pointer;
+}
 /* Header section */
 .header {
   display: flex;
@@ -32,7 +53,6 @@ body {
   top: 45px;
   left: 20px;
 }
-/* rgba(45, 49, 77, 0.7) */
 .header__menu__container.open {
   position: fixed;
   top: 80px;
@@ -55,7 +75,20 @@ body {
 .header__button {
   display: none;
 }
-
+/* Intro Section */
+.intro {
+  text-align: center;
+  padding: 0 25px 75px 25px;
+}
+.intro__image {
+  width: 100%;
+}
+.intro__title {
+  font-size: 38px;
+}
+.intro__button {
+  margin-top: 20px;
+}
 /* Attribution Section */
 .attribution {
   font-size: 11px;
