--- a/css/style.css
+++ b/css/style.css
@@ -27,6 +27,14 @@ body {
   padding: 15px 35px;
   cursor: pointer;
 }
+.screen-reader {
+  position: absolute;
+  left: -100vw;
+  top: auto;
+  width: 1px;
+  height: 1px;
+  overflow: hidden;
+}
 /* Header section */
 .header {
   display: flex;
@@ -140,11 +148,96 @@ body {
   color: hsl(12, 88%, 59%);
   box-shadow: none;
 }
+/* Footer Section */
+.footer {
+  background: hsl(233, 12%, 13%);
+  padding: 50px 25px;
+  display: grid;
+  grid-template-areas:
+    'newsletter'
+    'menu'
+    'social'
+    'copyright';
+}
+.footer__logo-socials {
+  grid-area: social;
+  display: flex;
+  flex-direction: column-reverse;
+}
+.footer__logo-block {
+  text-align: center;
+  margin-bottom: 40px;
+  transform: scale(1.2);
+}
+.footer__logo {
+  vertical-align: middle;
+}
+.footer__social-links {
+  list-style: none;
+  padding: 0;
+  display: flex;
+  justify-content: space-between;
+  margin: 0 15px 50px 15px;
+}
+.footer__svg {
+  transform: scale(1.75);
+}
+.footer__menu {
+  grid-area: menu;
+  list-style: none;
+  padding: 0;
+  margin: 0 20px 40px 40px;
+  display: flex;
+  justify-content: space-between;
+}
+.footer__menu__item {
+  margin-bottom: 15px;
+}
+.footer__menu__link {
+  color: hsl(13, 100%, 96%);
+  text-decoration: none;
+}
+.footer__newsletter {
+  grid-area: newsletter;
+  margin-bottom: 50px;
+}
+.footer__newsletter__form {
+  display: grid;
+  grid-template-columns: 75% 25%;
+  grid-gap: 10px;
+}
+.footer__newsletter__input {
+  font-family: 'Be Vietnam', sans-serif;
+  font-weight: 400;
+  border: none;
+  border-radius: 50px;
+  padding: 15px 25px;
+}
+.footer__newsletter__submit-button {
+  font-family: 'Be Vietnam', sans-serif;
+  font-size: 14px;
+  font-weight: 700;
+  background: hsl(12, 88%, 59%);
+  color: hsl(0, 0%, 98%);
+  text-transform: uppercase;
+  border: none;
+  border-radius: 50px;
+  padding: 15px 0;
+  cursor: pointer;
+}
+.footer__copyright {
+  grid-area: copyright;
+  color: hsl(227, 12%, 61%);
+  text-align: center;
+  font-size: 14px;
+  margin: 0;
+}
 /* Attribution Section */
 .attribution {
   font-size: 11px;
   text-align: center;
+  color: #ffffff;
 }
 .attribution a {
-  color: hsl(228, 45%, 44%);
+  color: #ffffff;
 }
